2013-04-30  chalabi

	* DESCRIPTION, R/base-format.R, R/calendar-nDay.R,
	  inst/unitTests/runit.SpecialDates.R: adapt to new version of
	  as.POSIXct

2012-12-01  chalabi

	* ChangeLog, DESCRIPTION: Updated ChangeLog and DESCRIPTION files.

2012-09-26  chalabi

	* NAMESPACE, R/calendar-endpoints.R, man/calendar-endpoints.Rd:
	  Hidden back .endpoints() to avoid conflicts with
	  xts:::endpoints()
	* DESCRIPTION: Updated version number and package title.

2012-09-24  chalabi

	* ChangeLog, DESCRIPTION: Updated ChangeLog and DESC files
	* DESCRIPTION: Adapted version number.
	* DESCRIPTION: Updated maintainer field.
	* NAMESPACE, R/base-weekdays.R: Removed external C call.

2012-08-04  mmaechler

	* DESCRIPTION, R/base-weekdays.R: we "semi-depend" on package
	  "date"

2012-03-21  chalabi

	* NAMESPACE: updated NAMESPACE
	* ChangeLog, DESCRIPTION: updated DESCRIPTION and ChangeLog
	* DESCRIPTION: updated version number

2012-03-20  chalabi

	* DESCRIPTION: updated DESC file

2012-03-20  wuertz

	* man/calendar-endpoints.Rd: non-ASCII characters removed
	* man/calendar-endpoints.Rd: man page for endpoints added
	* NAMESPACE: .endpoints renamed to endpoints
	* R/calendar-endpoints.R: .endpoints renamed yo endpoints and man
	  page added

2012-03-19  chalabi

	* man/calendar-align.Rd, man/calendar-periods.Rd,
	  man/graphics-plot.Rd: fixed manual pages

2012-03-18  wuertz

	* R/graphics-plot.R, R/methods-plot.R: graphics-plot.R renamed to
	  methods-plot.R
	* R/stats-frequency.R: description modified
	* R/calendar-nDay.R: tabs removed
	* R/calendar-isBizday.R, R/calendar-isWeekday.R: is Bizday and
	  isWeekday scripts merged
	* R/calendar-isDaily.R, R/calendar-isMonthly.R,
	  R/calendar-isQuarterly.R, R/calendar-isRegular.R: isDaily,
	  isMonthly, isQuarterly, isRegular merged to one script file
	* NAMESPACE: align* functions added
	* man/calendar-align.Rd: align help page updated
	* R/calendar-dayOfWeek.R, R/calendar-dayOfYear.R: dayOfWeek and