@@ -1,7 +1,7 @@
 Package: timeDate
 Title: Rmetrics - Chronological and Calendar Objects
-Date: 2018-02-21
-Version: 3043.102
+Date: 2018-11-29
+Version: 3043.103
 Author: Diethelm Wuertz [aut],
 	Tobias Setz [cre],
 	Yohan Chalabi [ctb],
